<resources
    xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">D3 Helper</string>

    <string name="ad_unit_id_profile">ca-app-pub-5558041745516886/9464075736</string>
    <string name="ad_unit_id_hero_1">ca-app-pub-5558041745516886/6796484130</string>
    <string name="ad_unit_id_hero_2">ca-app-pub-5558041745516886/8273217334</string>
    <string name="ad_unit_id_favorite_1">ca-app-pub-5558041745516886/9095645736</string>
    <string name="ad_unit_id_favorite_2">ca-app-pub-5558041745516886/1572378936</string>
    <string name="ad_unit_id_enchant">ca-app-pub-5558041745516886/6273276930</string>
    <string name="ad_unit_id_rankings">ca-app-pub-5558041745516886/3943762537</string>
    <string name="ad_unit_id_profile_popup"> ca-app-pub-5558041745516886/2310422136</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_battle_tag">Add BattleTag</string>
    <string name="battle_tag">battle tag</string>
    <string name="battle_tag_number_hint">1234</string>
    <string name="hash">#</string>
    <string name="server">Server</string>
    <string name="favorite">Favorites</string>
    <string name="ranking">Rankings</string>
    <string name="enchant">Enchant</string>
    <string name="setting">Settings</string>
    <string name="remove_ad">Remove advertisement</string>
    <string name="suggestion">Suggestion</string>
    <string name="action_capture">Capture</string>
    <string name="action_add_battle_tag">Add BattleTag</string>
    <string name="action_remove_battle_tag">Remove BattleTag</string>
    <string name="action_add_favorite">Add to Favorites</string>
    <string name="action_remove_favorite">Remove from Favorites</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="coming_soon">Coming soon</string>
    <string name="favorite_no_exist">There is no Favorite.</string>
    <string name="add_favorite">Add Favorites</string>
    <string name="remove_favorite">Remove Favorites</string>
    <string name="favorite_added">Added to Favorites.</string>
    <string name="favorite_removed">Removed from Favorites.</string>
    <string name="hero">Heroes</string>
    <string name="item">Items</string>
    <string name="weapon">Weapon</string>
    <string name="amulet">Amulet</string>
    <string name="dps_calculator">DPS Calculator</string>
    <string name="view_profile">View Profile</string>
    <string name="view_hero">View Hero</string>
    <string name="active">ACTIVE</string>
    <string name="passive">PASSIVE</string>
    <string name="current_weapon_info">Current Weapon Information</string>
    <string name="damage_per_second">Damage per Second</string>
    <string name="attack_per_second">Attack per Second</string>
    <string name="primary">Primary</string>
    <string name="weapon_damage">Damage</string>
    <string name="damage_percent">Damage</string>
    <string name="attack_speed_percent">Attack Speed</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="damage_percent_hint">Increment(%)</string>
    <string name="attack_speed_percent_hint">Increment(%)</string>
    <string name="enchant_result">Result</string>
    <string name="weapon_damage_max">Max Damage</string>
    <string name="damage_percent_max">Max Damage Increment</string>
    <string name="attack_speed_max">Max Attack Speed Increment</string>
    <string name="attack_speed_to_damage_percent_max"><![CDATA[Attack Speed ->\nMax Damage Increment]]></string>
    <string name="damage_percent_to_attack_speed_max"><![CDATA[Damage Increment ->\nMax Attack Speed Increment]]></string>
    <string name="weapon_one_hand">One Hand</string>
    <string name="weapon_one_hand_ancient">Ancient One Hand</string>
    <string name="weapon_two_hand">Two Hands</string>
    <string name="weapon_two_hand_ancient">Ancient Two Hands</string>
    <string name="weapon_hand_crossbow">Hand Crossbow</string>
    <string name="weapon_hand_crossbow_ancient">Ancient Hand Crossbow</string>
    <string name="lifetime_kills">Lifetime Kills</string>
    <string name="elite_kills">Elite Kills</string>
    <string name="paragon_level">Paragon Level</string>
    <string name="items">Items</string>
    <string name="view_details">View Details</string>
    <string name="jewel">Jewel</string>
    <string name="kanai_s_cube_powers">Kanai\'s Cube Powers</string>
    <string name="attributes">Attributes</string>
    <string name="offense">Offense</string>
    <string name="defense">Defense</string>
    <string name="resistance">Resistance</string>
    <string name="life">Life</string>
    <string name="adventure">Adventure</string>
    <string name="skills">Skills</string>
    <string name="advertisements">Advertisements</string>
    <string name="statistics">Statistics</string>
    <string name="last_update">"Last Update : "</string>
    <string name="load_error">Error occurred during load data.</string>
    <string name="send_email">Send Email</string>
    <string name="diablo3_suggestion">Diablo3 Suggestion</string>
    <string name="save_to_gallery_done">Saved to Gallery.</string>
    <string name="barbarian">Barbarian</string>
    <string name="crusader">Crusader</string>
    <string name="demon_hunter">Demon Hunter</string>
    <string name="monk">Monk</string>
    <string name="witch_doctor">Witch Doctor</string>
    <string name="wizard">Wizard</string>
    <string name="necromancer">Necromancer</string>
    <string name="europe">Europe</string>
    <string name="korea">Korea</string>
    <string name="taiwan">Taiwan</string>
    <string name="us">US</string>
    <string name="stat_strength">Strength</string>
    <string name="stat_dexterity">Dexterity</string>
    <string name="stat_intelligence">Intelligence</string>
    <string name="stat_vitality">Vitality</string>
    <string name="stat_damage">Damage</string>
    <string name="stat_toughness">Toughness</string>
    <string name="stat_healing">Healing</string>
    <string name="stat_primary_resource">Primary Resource</string>
    <string name="stat_secondary_resource">Secondary Resource</string>
    <string name="stat_damage_increased_by_skills">Damage Increased by Skills</string>
    <string name="stat_attack_per_second">Attack per Second</string>
    <string name="stat_critical_hit_chance">Critical Hit Chance</string>
    <string name="stat_critical_hit_damage">Critical Hit Damage</string>
    <string name="stat_thorns">Thorns</string>
    <string name="stat_armor">Armor</string>
    <string name="stat_damage_reduction">Damage Reduction</string>
    <string name="stat_block_chance">Block Chance</string>
    <string name="stat_block_amount">Block Amount</string>
    <string name="stat_physical_resistance">Physical Resistance</string>
    <string name="stat_fire_resistance">Fire Resistance</string>
    <string name="stat_cold_resistance">Cold Resistance</string>
    <string name="stat_lightning_resistance">Lightning Resistance</string>
    <string name="stat_poison_resistance">Poison Resistance</string>
    <string name="stat_arcane_holy_resistance">Arcane Resistance</string>
    <string name="stat_maximum_life">Maximum Life</string>
    <string name="stat_life_per_hit">Life per Hit</string>
    <string name="stat_life_per_kill">Life per Kill</string>
    <string name="stat_life_steal">Life Steal</string>
    <string name="stat_magic_find">Magic Find</string>
    <string name="stat_gold_find">Gold Find</string>
    <string name="followers">Followers</string>
    <string name="enchantress">Enchantress</string>
    <string name="scoundrel">Scoundrel</string>
    <string name="templar">Templar</string>
    <string name="experience_bonus">Experience Bonus</string>
    <string name="rankings">Rankings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="season_character">Seasonal</string>
    <string name="hardcore_character">Hardcore</string>
    <string name="season_1">Season 1</string>
    <string name="season_2">Season 2</string>
    <string name="season_3">Season 3</string>
    <string name="season_4">Season 4</string>
    <string name="season_5">Season 5</string>
    <string name="season_6">Season 6</string>
    <string name="season_7">Season 7</string>
    <string name="season_8">Season 8</string>
    <string name="greater_rift_2_player">2 Player</string>
    <string name="greater_rift_3_player">3 Player</string>
    <string name="greater_rift_4_player">4 Player</string>
    <string name="greater_rift_barbarian">Barbarian</string>
    <string name="greater_rift_crusader">Crusader</string>
    <string name="greater_rift_demon_hunter">Demon Hunter</string>
    <string name="greater_rift_monk">Monk</string>
    <string name="greater_rift_witch_doctor">Witch Doctor</string>
    <string name="greater_rift_wizard">Wizard</string>
    <string name="greater_rift_necromancer">Necromancer</string>
    <string name="greater_rift_tier">%1$s\n%2$dTier</string>
    <string name="armor">Armor</string>
    <string name="damage">Damage</string>
    <string name="need_permission">You need permission to perform this action.</string>
    <string name="bonus_bounty_order">Bonus Bounty Order</string>
    <string name="bounty_act">Act%d</string>
    <string name="bonus_bounty_order_time_am">%02d AM</string>
    <string name="bonus_bounty_order_time_pm">%02d PM</string>
    <string name="current">Current</string>
    <string name="show_notification">Show Notification</string>
    <string name="weapon_information">Weapon Information</string>
    <string name="remove_damage_percent">Remove Damage Increment</string>
    <string name="remove_attach_speed">Remove Attack Speed Increment</string>
    <string name="calculator">Calculator</string>
    <string name="about">About</string>
    <string name="add">ADD</string>
    <string name="add_damage">Add Damage</string>
    <string name="current_hero_info">Current Hero Information</string>
    <string name="dps">DPS</string>
</resources>
