<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingBottom="40dp"
                android:paddingTop="40dp">

    <ProgressBar
        android:id="@+id/tooltip_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"/>

    <RelativeLayout
        android:id="@+id/tooltip_web_view_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="48dp">

        <com.woozam.wdthelper.app.view.D3WebView
            android:id="@+id/tooltip_web_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tooltip_save_screen_shot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tooltip_web_view_layout"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/tooltip_save_screen_shot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_01_selector"
            android:text="@string/save_to_gallery"
            android:textColor="@color/white"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/tooltip_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_01_selector"
            android:text="@string/add_favorite"
            android:textColor="@color/white"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/tooltip_enchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_01_selector"
            android:text="@string/enchant"
            android:textColor="@color/white"
            android:textSize="15dp"/>
    </LinearLayout>

</RelativeLayout>